[package]
name = "forceatlas2"
version = "0.1.0"
authors = ["tuxmain <tuxmain@zettascript.org>"]
repository = "https://framagit.org/ZettaScript/forceatlas2-rs"
license = "AGPL3"
edition = "2018"

[dependencies]
itertools = "0.10.0"
maths-traits = "0.2.1"
rand = { version = "0.8.0", optional = true }
nbody_barnes_hut = { version = "0.1.0", optional = true }

[dev-dependencies]
plotters = "0.3.0"
stl = {git = "https://github.com/etrombly/rust-stl"}

[features]
default = ["rand", "barnes_hut"]
barnes_hut = ["nbody_barnes_hut"]
