[package]
name = "forceatlas2"
version = "0.1.0"
description = "ForceAtlas2 n-dimension graph layout"
authors = ["tuxmain <tuxmain@zettascript.org>"]
repository = "https://framagit.org/ZettaScript/forceatlas2-rs"
keywords = ["force", "graph", "algorithm"]
license = "AGPL-3.0-only"
edition = "2018"

[profile.release]
codegen-units = 1
debug = true

[dependencies]
itertools = "0.10.0"
maths-traits = "0.2.1"
rand = { version = "0.8.3", optional = true }
nbody_barnes_hut = { version = "0.1.0", optional = true }

[dev-dependencies]
alloc_counter = "0.0.4"
plotters = "0.3.0"
scanrs = "0.2.1"
sdl2 = "0.34.4"
stl = {git = "https://github.com/etrombly/rust-stl"}

[features]
default = ["rand"]
barnes_hut = ["nbody_barnes_hut"]
